# zoss-2025

domaci_r211_2025_Marija/4. domaci/: forensics.yml  inventory.ini  restore.yml
domaci_r214_2025_Aleksandar/: README.md  inventory.ini  postgres_restore.yml
projektni_zadatak/KT3-MarijaAndric/: Cargo.toml  README.md
projektni_zadatak/KT3-MarijaAndric/images/: Multi-turn-manipulation.webm
projektni_zadatak/KT3-MarijaAndric/knowledge/: factions.txt  locations.txt  npc_hollow_man.txt  npc_lyra_silverwind.txt  npc_old_man_hemlock.txt  npc_rosalind.txt  npc_sister_lora.txt  world_lore.txt
projektni_zadatak/KT3-MarijaAndric/knowledge/secrets/: secrets_old_man_hemlock.txt  secrets_sister_lora.txt
projektni_zadatak/KT3-MarijaAndric/src/: embeddings.rs  llm.rs  main.rs  rag.rs  security.rs
projektni_zadatak/nginx_napadi/: README.md
projektni_zadatak/nginx_napadi/napad/: Dockerfile  QUICKSTART.md  backend.py  exploit.py  nginx.conf  start-services.sh  test.sh
projektni_zadatak/rust_napadi/: README.md
projektni_zadatak/rust_napadi/napad/: Cargo.toml  Dockerfile  QUICKSTART.md  exploit.py  server.rs  start.sh
vezbe/domaci_r211_2025_Marija/4. domaci/: backup.yml
vezbe/domaci_r214_2025_Aleksandar/: postgres_backup.yml  shellshock_forensics.yml
